Feature: adding sharing and remove share games in family